--- a/src/main/webapp/WEB-INF/include/user-header.jspf
+++ b/src/main/webapp/WEB-INF/include/user-header.jspf
@@ -28,7 +28,7 @@
 		<ul class="sub_icons flexCenter">
 			<li class="search flex">
 				<form id="search" name="search" method="post" action="/search">
-					<input type="text" name="search_keyword" placeholder="주소 또는 업체명을 검색해 주세요" autocomplete="off" value="${empty search_keyword?'':search_keyword}">
+					<input type="text" name="search_keyword" placeholder="무엇이 궁금하개?" autocomplete="off" value="${empty search_keyword?'':search_keyword}">
 					<input type="hidden" name="currentPageNo" value="${empty currentPageNo?'1':currentPageNo}">
 				</form>
 				<button type="submit"><i class="fa-solid fa-magnifying-glass"></i><span class="displaynone">검색</span></button>
