--- a/src/main/webapp/resources/css/mbti/style.css
+++ b/src/main/webapp/resources/css/mbti/style.css
@@ -1,21 +1,15 @@
-@charset "UTF-8";
-/*
-@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
-*/
-@font-face { font-family: 'Pretendard Variable'; font-weight: 45 920; font-style: normal; font-display: swap; src: local('Pretendard Variable'), url('/resources/font/PretendardVariable.woff2') format('woff2-variations'); }
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Noto+Serif+KR:wght@200;300;400;500;600;700;900&family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
-html { 
-	font-family: 'Pretendard Variable', 'Noto Sans KR', '돋움', Dotum, Tahoma, Geneva, sans-serif; 
-	font-feature-settings: 'case', 'ccmp', 'tnum', 'ss01', 'ss02', 'ss03', 'ss07', 'ss08'; 
-	-webkit-font-feature-settings: 'case', 'ccmp', 'tnum', 'ss01', 'ss02', 'ss03', 'ss07', 'ss08'; 
-	-moz-font-feature-settings: 'case', 'ccmp', 'tnum', 'ss01', 'ss02', 'ss03', 'ss07', 'ss08'; 
-} /* Pretendard 기준 대문자에 맞춘 숫자, 합성문자, 고정폭 숫자, 곧은 69, 열린4, 가운데 맞춤 :, 단층 a, 직선 3 */
 
 .container {
 	padding: 0px;
 	background-color: #A0774B;
 	margin: 0 auto;
 }
+
+.container2 {
+	padding: 0px;
+	background-color: #FFFFFF;
+	margin: 0 auto;
+} 
 
 article {
 	display :flex;
@@ -26,10 +20,28 @@ img {
 	width: 500px;
 	margin: 0 auto;
 }
-
 button {
+	font-family: 'Pretendard Variable', 'Noto Sans KR', '돋움', Dotum, Tahoma, Geneva, sans-serif; 
+	-webkit-font-feature-settings: 'case', 'ccmp', 'tnum', 'ss01', 'ss02', 'ss03', 'ss07', 'ss08'; 
+}
+#mbtiButton {
+	width: 430px;
+	margin: 0 auto;
+	padding: 10px 50px;
+	margin-top: 10px;
+	font-weight: 600;
+}
+
+#A {
 	width: 500px;
 	margin: 0 auto;
+	padding: 10px 50px;
+}
+
+#B {
+	width: 500px;
+	margin: 0 auto;
+	padding: 10px 50px;
 }
 
 .progress {
@@ -38,8 +50,8 @@ button {
 }
 
 .start {
+	background-color: #A0774B;
 	text-align: center;
-
 	font-family: 'Pretendard Variable', 'Noto Sans KR', '돋움', Dotum, Tahoma, Geneva, sans-serif; 
 	-webkit-font-feature-settings: 'case', 'ccmp', 'tnum', 'ss01', 'ss02', 'ss03', 'ss07', 'ss08'; 
 	font-weight:900; 
@@ -47,21 +59,45 @@ button {
 }/*	font-family: 'Black Han Sans', sans-serif;*/
 
 .result {
+	padding: 0px;
+	background-color: #FFFFFF;
+	margin: 0 auto;
 	text-align: center;
-
 	font-family: 'Pretendard Variable', 'Noto Sans KR', '돋움', Dotum, Tahoma, Geneva, sans-serif; 
 	-webkit-font-feature-settings: 'case', 'ccmp', 'tnum', 'ss01', 'ss02', 'ss03', 'ss07', 'ss08'; 
 	font-weight: 900;
-}/*	font-family: 'Black Han Sans', sans-serif;*/
+}
 
 .question {
 	display: none;
 } 
 
-.result {
-	display: none;
-}
 
 .share {
 	margin: 0 auto;
 }
+
+ul {
+    margin-bottom: 0;
+}
+
+a {
+    color: inherit;
+}
+
+/* h1 {
+	margin-top: 20px;
+}
+h2 {
+	margin-top: 10px;
+}
+h3 {
+	margin-top: 10px;
+}
+h4 {
+	margin-top: 10px;
+}
+#title {
+	margin-top: 50px;
+	text-align: center;
+} */
