--- a/src/main/webapp/WEB-INF/include/user-header.jspf
+++ b/src/main/webapp/WEB-INF/include/user-header.jspf
@@ -22,7 +22,7 @@
 		<ul class="sub_pages flexCenter">
 			<li><a class="paw_hover" href="">함께해요</a></li>
 			<li><a class="paw_hover" href="">멍멍왈왈</a></li>
-			<li><a class="paw_hover" href="">개BTI</a></li>
+			<li><a class="paw_hover" href="/mbti.paw">개BTI</a></li>
 			<li><a class="paw_hover" href="">우리동네</a></li>
 		</ul>
 		<ul class="sub_icons flexCenter">
