--- a/src/main/webapp/resources/css/board_comm/board_comm_modify.css
+++ b/src/main/webapp/resources/css/board_comm/board_comm_modify.css
@@ -51,6 +51,9 @@ section.notice {
 .frame1 {
 	border-radius: 2em 2em 2em 2em;
 	background-color: #e6b4ac;
+	float: left;
+	margin-top: 13px;
+	margin-left: 20px;
 }
 
 .frame2 {
@@ -64,22 +67,10 @@ section.notice {
 .lastFont {
 	text-align: right;
 }
-
-.title {
-	float: left;
-	margin-top: 13px;
-	margin-left: 200px;
-	font-size: 15px;
-}
-
 .content {
 	border: none;
 	outline: none;
 }
-.fontPosition{
-text-align:right;
-font-size: 12px;
-float:right;
-margin-top: 25px;
-margin-right: 20px;
+.title2{
+margin-top: 4px;
 }
