--- a/src/main/webapp/WEB-INF/include/common-head.jspf
+++ b/src/main/webapp/WEB-INF/include/common-head.jspf
@@ -34,5 +34,5 @@
 
 <!-- js -->
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-<!-- <script src="/resources/js/common/common.js"></script> -->
+<script src="/resources/js/common/common.js"></script>
 </head>
