--- a/src/main/webapp/resources/css/board_comm/board_comm_list.css
+++ b/src/main/webapp/resources/css/board_comm/board_comm_list.css
@@ -19,40 +19,11 @@ section.notice {
 }
 
 #board-search .search-window {
-	padding: 15px 0;
 	background-color: #f9f7f9;
-}
-
-#board-search .search-window .search-wrap {
-	position: relative;
-	margin: 0 auto;
-	width: 80%;
-	max-width: 564px;
-}
-
-#board-search .search-window .search-wrap input {
-	height: 20px;
-	width: 80%;
-	font-size: 14px;
-	padding: 7px 14px;
-	border: 1px solid #ccc;
-}
-
-#board-search .search-window .search-wrap input:focus {
-	border-color: #333;
-	outline: 0;
-	border-width: 1px;
-}
-
-#board-search .search-window .search-wrap .btn {
-	position: absolute;
-	right: 0;
-	top: 0;
-	bottom: 0;
-	width: 60px;
-	padding: 2px;
-	font-size: 16px;
+	max-width: 100%;
+	width: 100%;
 	text-align: center;
+	padding: 20px ;
 }
 
 .board-table {
@@ -108,34 +79,6 @@ section.notice {
 	display: none;
 }
 
-.btn {
-	display: inline-block;
-	padding: 0 30px;
-	font-size: 15px;
-	font-weight: 400;
-	background: transparent;
-	text-align: center;
-	white-space: nowrap;
-	vertical-align: middle;
-	-ms-touch-action: manipulation;
-	touch-action: manipulation;
-	cursor: pointer;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-	border: 1px solid transparent;
-	text-transform: uppercase;
-	-webkit-border-radius: 0;
-	-moz-border-radius: 0;
-	border-radius: 0;
-	-webkit-transition: all 0.3s;
-	-moz-transition: all 0.3s;
-	-ms-transition: all 0.3s;
-	-o-transition: all 0.3s;
-	transition: all 0.3s;
-}
-
 /* reset */
 * {
 	list-style: none;
@@ -164,3 +107,6 @@ section.notice {
 	width: 1px;
 	height: 1px;
 }
+/* .cate{
+	margin-top:25px;
+} */
