--- a/src/main/webapp/resources/css/place/detail.css
+++ b/src/main/webapp/resources/css/place/detail.css
@@ -10,3 +10,29 @@
 
 /* 상단 시설 핵심 정보 */
 .detail_wrap{ margin: 20px auto; }
+.detail_wrap .title_wrap{ justify-content: space-between; align-items: flex-end; }
+.detail_wrap .reveiw_avg{ margin: 10px 0 30px; }
+.detail_wrap .reveiw_avg i{ display: inline; color: #ffb100; }
+.detail_wrap .tab_wrap{ position: sticky; top: 60px; left: 0; z-index: 2; }
+.detail_wrap .tab_wrap li{ flex: 1; }
+.detail_wrap article > ul > li { padding: 20px; border-bottom: 1px dotted var(--subGray_20); box-sizing: border-box; }
+.detail_wrap article > ul > li:first-child{ border: none; }
+.detail_wrap article ul li > strong{ display: inline-block; min-width: 100px; }
+
+/* 메뉴 리스트 */
+#menu_wrap .title{ line-height: 2; }
+#menu_wrap .menu_list{ width: 100%; }
+#menu_wrap .menu_list li { width: 50%; min-width: max(340px, 50%); padding: 10px 20px; border-top: 1px dotted var(--subGray_20); box-sizing: border-box; }
+#menu_wrap .menu_list li:nth-child(1),
+#menu_wrap .menu_list li:nth-child(2){ border: none; }
+#menu_wrap .menu_list li,
+#menu_wrap .menu_list li .edit { display: flex; justify-content: space-between; align-items: center; gap: 20px; }
+#menu_wrap .menu_list li .edit{ width: 100%; padding: 0; }
+#menu_wrap .menu_list li .edit ~ .print,
+#menu_wrap .menu_list li .edit ~ .btn_wrap{ display: none; }
+#menu_wrap .menu_list li p{ width: calc(100% - 125px); }
+#menu_wrap .menu_list li p span:not(.displaynone){ display: inline-block; width: 45%; }
+#menu_wrap .menu_list li p span:nth-child(2),
+#menu_wrap .menu_list li p span:nth-child(2) input{ text-align: right; }
+#menu_wrap .menu_list li .btn_wrap{ width: 125px; }
+#menu_wrap .menu_list li .btn_wrap .btn{ width: 47%; height: 2.5em; }
