--- a/src/main/webapp/resources/css/place/list.css
+++ b/src/main/webapp/resources/css/place/list.css
@@ -4,7 +4,7 @@
 .search_wrap input{ width: 100%; height: 50px; padding: 10px; padding-left: 50px; font-size: 1.2em; }
 
 /* 리스트 영역 */
-.list_wrap{ flex: 1; overflow: hidden; }
+.list_wrap{ flex: 1; padding-right: 20px; overflow: hidden; }
 .list_wrap .condition_wrap{ justify-content: space-between; padding-bottom: 10px; border-bottom: 1px solid var(--subGray_60); }
 /* 카테고리 */
 .list_wrap .cate_slide{ width: calc(100% - 100px); overflow-x: auto; }
