--- a/src/main/webapp/WEB-INF/include/admin-header.jspf
+++ b/src/main/webapp/WEB-INF/include/admin-header.jspf
@@ -15,7 +15,7 @@
 		<li><a href=""><i class="fa-solid fa-user-group"></i> 고객정보 관리</a></li>
 		<li><a href=""><i class="fa-solid fa-flag"></i> 함께해요 관리</a></li>
 		<li><a href=""><i class="fa-solid fa-comments"></i> 멍멍왈왈 관리</a></li>
-		<li><a href="/admin/placce/list.paw"><i class="fa-solid fa-building-wheat"></i> 우리동네 관리</a></li>
+		<li><a href="/admin/place/list.paw"><i class="fa-solid fa-building-wheat"></i> 우리동네 관리</a></li>
 		<li><a href=""><i class="fa-solid fa-bell"></i>알람 관리</a>
 	</ul>
 	<div class="btn_wrap flex flexWrap flexBetween">
