--- a/src/main/webapp/resources/css/together/togetherlist.css
+++ b/src/main/webapp/resources/css/together/togetherlist.css
@@ -24,7 +24,7 @@ display:absolute;
 .cate_wrap{
 width:100%;
 display:flex;
-}
+} 
 
 .main_list{
 width:100%;
@@ -36,15 +36,18 @@ position:relative;
 .cate_button{
 position:relative;
 height:auto;
-}
+padding-top : 110px;
+} 
 
 .cate_button li{
 text-align:center;
 }
 
-.button_list{
+ul.button_list{
 border:1px solid #f0b1aa;
 width:100%;
+position:relative;
+height:auto;
 }
 
 li.tcname{
