--- a/src/main/webapp/resources/css/board_comm/mypageBoardList.css
+++ b/src/main/webapp/resources/css/board_comm/mypageBoardList.css
@@ -3,27 +3,22 @@ table {
 	border-spacing: 0;
 }
 
-section.notice {
-	padding: 80px 0;
+.container {
+font-size: 25px;
+margin: 20px;
+}
+
+.notice {
+	padding: 20px 0;
 }
 
 .page-title {
-	margin-bottom: 60px;
 }
 
 .page-title h3 {
-	font-size: 28px;
-	color: #333333;
-	font-weight: 400;
+	font-size: 25px;
+	color: #e7e7e7;
 	text-align: center;
-}
-
-#board-search .search-window {
-	background-color: #f9f7f9;
-	max-width: 100%;
-	width: 100%;
-	text-align: center;
-	padding: 20px ;
 }
 
 .board-table {
@@ -93,10 +88,6 @@ section.notice {
 	clear: both;
 }
 
-.container {
-	width: 1100px;
-	margin: 0 auto;
-}
 
 .blind {
 	position: absolute;
@@ -105,4 +96,7 @@ section.notice {
 	margin: -1px;
 	width: 1px;
 	height: 1px;
+}
+.fa-solid, .fas {
+font-size: 20px; 
 }
