--- a/src/main/webapp/resources/css/common/layout.css
+++ b/src/main/webapp/resources/css/common/layout.css
@@ -16,7 +16,7 @@ header .header_wrap .sub_pages .paw_hover{ background-size: 1em; }
 header .header_wrap .sub_pages nav{ display: none; }
 header .header_wrap .sub_icons{ gap: 20px; }
 header .header_wrap .sub_icons .alram{ position: relative; }
-header .header_wrap .sub_icons .alram .al_cnt{ display: block; width: 20px; height: 20px; border-radius: 50%; position: absolute; top: -10px; right: -10px; font-size: 0.5em; text-align: center; line-height: 20px; }
+header .header_wrap .sub_icons .alram #al_cnt{ display: block; width: 20px; height: 20px; border-radius: 50%; position: absolute; top: -10px; right: -10px; font-size: 0.5em; text-align: center; line-height: 20px; }
 
 /* main */
 main{ min-height: calc(100vh - 240px); margin-top: 60px; padding: 20px 0;  position: relative; top: 0; left: 0; }
