--- a/src/main/webapp/resources/css/chat/chat.css
+++ b/src/main/webapp/resources/css/chat/chat.css
@@ -29,11 +29,11 @@ main {
     width: 35vw;
     min-width: 300px;
     height: 90vh;
-	font-size: 18px;
+	font-size: 20px;
 }
  
 .chat_main h1 {
-	font-size: 18px;
+	font-size: 20px;
     padding: 10px;
     height: 50px;
     box-sizing: border-box;
@@ -54,7 +54,7 @@ main {
 }
  
 .chat_main nav {
-	font-size: 18px;
+	font-size: 20px;
 	 display: flex;
 	 text-align: center;
 	 margin-bottom: 5px;
@@ -75,7 +75,7 @@ main {
 }
  
 .chat_main li {
-	font-size: 18px;
+	font-size: 20px;
     width: 100%;
     height: 70px;
     padding: 7px;
@@ -134,19 +134,17 @@ main {
 } /* #faf2eb */
  
 .chat h2 {
-	font-size: 18px;
+	font-size: 20px;
 	font-weight: bold;
     padding: 10px;
     height: 50px;
     box-sizing: border-box;
     text-align: center;
     background: #f0b1aa;
-    border-start-start-radius: 15px;
-    border-start-end-radius: 15px;
 }
  
 .chat .chat_back {
-	font-size: 18px;
+	font-size: 20px;
     width: 50px;
     height: 50px;
     position: absolute;
@@ -162,12 +160,10 @@ main {
     box-sizing: border-box;
     padding: 5px 0;
     background-color: #faf2eb;
-    border-end-start-radius: 15px;
-    border-end-end-radius: 15px;
 }
  
 .chat li {
-	font-size: 18px;
+	font-size: 20px;
 }
  
 .chat li > div {
@@ -182,7 +178,7 @@ main {
 .chat li .notification span {
 	margin: 0 auto;
 	border-radius: 15px;
-	padding: 5px 20px;
+	padding: 5px 10px;
 	background: #e66f84;
 	color: #fff;
 }
@@ -208,7 +204,7 @@ main {
 }
  
 .chat .chat_in_time {
-	font-size: 18px;
+	font-size: 20px;
     margin: 0 5px;
     display: flex;
     align-items: flex-end;
@@ -216,14 +212,14 @@ main {
  
 .chat .chat_content {
     padding: 5px;
-    border-radius: 13px;
+    border-radius: 3px;
     box-shadow: 0px 2px 3px 0px rgb(0 0 0 / 25%);
     display: inline-block;
     max-width: 250px;
     max-height: 400px;
     overflow-y: auto;
     word-break: break-all;
-	font-size: 18px;
+	font-size: 20px;
 }
  
 .chat .chat_me .chat_content {
@@ -275,20 +271,19 @@ main {
  
 .chat .chat_users {
 	width: 30%;
+	height: 300px;
     margin-right: 3px;
-    font-size: 18px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    font-size: 20px;
 }
 
 /* 참가인원 */
 .chat .chat_users h2 {
-	font-size: 18px;
+	font-size: 20px;
 }
  
 .chat .chat_users .chat_nickname {
 	font-size: 20px;
+	height: calc(100% - 50px);
 	overflow: auto;
 	background-color: #fff;
 	margin-bottom: 120px;
@@ -296,68 +291,22 @@ main {
 	
 .chat .chat_users .chat_nickname li {
 	padding: 5px;
-    font-size: 18px;
-    padding-left: 25px;
+    font-size: 20px;
 }
 
 .btn {
-    font-size: 18px;
-}
-
-.chat_exit_closed {
-    border: 1px solid #ce0000;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    flex-direction: row;
-    align-items: center;
-    padding-block: 5px;
-    border-radius: 20px;
-    color: #ce0000;
-}
-
-.chat_exit_closed:hover {
-    display: none;
+    font-size: 20px;
 } 
 
-.chat_exit_closed:hover + .chat_exit_open {
-	display: flex;
-}
-
-.chat_exit_open {
- 	border: 1px solid #ce0000;
-	background-color : #ce0000;
-    display: none;
-    justify-content: center;
-    align-content: center;
-    flex-direction: row;
-    align-items: center;
-    padding-block: 5px;
-    border-radius: 20px;
-    color: #fff;
-}
-
-.chat_exit i {
- 	margin-right: 10px;
-}
-
-.chat_exit_div {
-	display: flex;
-	font-size: 18px;
-	
-}
-
-.chat_exit .fa-door-closed {
-	display: show;
-}
-
-.chat_img {
-	margin-bottom: 40%;
+.chat_exit {
+	font-size: 16px;
+	margin-left: 10px;
+	padding: 1px;
 }
 
 @media(max-width: 1024px)  {
 	.chat_main {
-	    font-size: 18px;
+	    font-size: 20px;
 	}
 	.chat_main {
 		width: 99vw;
