--- a/src/main/webapp/resources/css/alarm/admin_list.css
+++ b/src/main/webapp/resources/css/alarm/admin_list.css
@@ -1,1 +1,15 @@
 main section{ margin: 20px auto; }
+main .btn_wrap{ display: flex; gap: 10px; margin-top: 20px; }
+main .btn_wrap .btn{ flex: 1; text-align: center; }
+
+/* 알람 수정 팝업 */
+#pop{ display: flex; justify-content: center; align-items: center; width: 100vw; height: 100vh; position: fixed; top: 0; left: 0; z-index: 999; }
+#pop::after{ display: block; content: ""; width: 100%; height: 100%; position: absolute; top: 0; left: 0; z-index: -1; background-color: #00000080; }
+#pop #modi_content{ max-width: 500px; padding: 20px; border-radius: 5px; background-color: #fff; }
+#pop #modi_content input[type="text"]{ width: 100%; margin-top: 10px; }
+
+/* 알람 리스트 테이블 */
+.al_list_wrap .check,
+.al_list_wrap .idx,
+.al_list_wrap .target{ width: 8em; text-align: center; }
+.al_list_wrap .check input{ margin-right: 10px; }
